--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,340 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  color: #000000;
+  font-family: "Nunito", sans-serif;
+  background: rgb(238, 238, 238);
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* ------------------------------------ Nav Bar ------------------------------------------- */
+.loading {
+  --speed-of-animation: 0.9s;
+  --gap: 6px;
+  --first-color: #4c86f9;
+  --second-color: #49a84c;
+  --third-color: #f6bb02;
+  --fourth-color: #f6bb02;
+  --fifth-color: #2196f3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  gap: 6px;
+  height: 100px;
+ }
+ 
+ .loading span {
+  width: 4px;
+  height: 50px;
+  background: var(--first-color);
+  animation: scale var(--speed-of-animation) ease-in-out infinite;
+ }
+ 
+ .loading span:nth-child(2) {
+  background: var(--second-color);
+  animation-delay: -0.8s;
+ }
+ 
+ .loading span:nth-child(3) {
+  background: var(--third-color);
+  animation-delay: -0.7s;
+ }
+ 
+ .loading span:nth-child(4) {
+  background: var(--fourth-color);
+  animation-delay: -0.6s;
+ }
+ 
+ .loading span:nth-child(5) {
+  background: var(--fifth-color);
+  animation-delay: -0.5s;
+ }
+ 
+ @keyframes scale {
+  0%, 40%, 100% {
+   transform: scaleY(0.05);
   }
+ 
+  20% {
+   transform: scaleY(1);
+  }
+ }
+
+/* ------------------------------------ Nav Bar ------------------------------------------- */
+.App-logo {
+  padding: 0.2rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid #cccccc79;
+  box-shadow: 1px 1px 3px rgba(96, 96, 96, 0.5);
+}
+.nav-container{
+  display: flex ;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-search{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: -0.2rem 0 0 0;
+  border-radius: 2rem;
+  padding: 0.15rem 0.5rem;
+  border: 1px solid #a5a5a579;
+  width: 10rem;
+  height: 2.5rem;
+  transition: 0.2s ease-in-out;
+}
+.nav-search-input {
+  flex: 1; 
+}
+.nav-search-input:focus {
+  outline: none; 
+}
+
+.nav-search:focus-within {
+  width: 20rem; /* Increase width on focus */
+  border: 1px solid #027df84e;;
+}
+
+.user-logged {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  padding: 0;
+  overflow: hidden; 
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  box-shadow: 1px 1px 3px rgba(96, 96, 96, 0.5);
+}
+
+.user-logged-avt {
+  width: 2.5rem;
+  height: 2.5rem;
+  object-fit: cover; 
+  border-radius: 50%; 
+  box-shadow: 1px 1px 3px rgba(96, 96, 96, 0.5);
+}
+.nav-user-feat{
+  display: flex;
+  align-items: center;
+}
+
+.nav-page-button{
+  width: 6rem;
+  height: 2.5rem;
+}
+
+.current-page {
+  background: #f3fbff;
+  border-bottom: 2px solid #027ef8;
+}
+.nav-notification-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: #ededed;
+  padding: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.nav-notification-button:hover {
+  background: #cccccc;
+}
+
+/*-------------------------------Login-register--------------------------------------*/
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.auth-background {
+  background: linear-gradient(270deg, #2f8e67, #5aeeff, #40dcff, #9d82ff);
+  background-size: 800% 800%;
+  animation: gradientBackground 13s ease infinite;
+  height: 100vh;
+}
+.login-form {
+  background-color: #00000042;
+  padding: 2rem;
+  border-radius: 1rem;
+  color: #ffffff;
+  border: 1px solid #ebebeb5a;
+  box-shadow: rgba(255, 255, 255, 0.548) 1px 5px 15px 0px;
+}
+.register-form{
+  background-color: #0000003c;
+  padding: 2rem;
+  width: 50vw;
+  border-radius: 1rem;
+  color: #ffffff;
+  border: 1px solid #ebebeb5a;
+  box-shadow: rgba(255, 255, 255, 0.548) 1px 5px 15px 0px;
+  
+}
+
+.otp-Form {
+  width: 230px;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 30px;
+  gap: 20px;
+  position: relative;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.082);
+  border-radius: 15px;
+}
+
+.mainHeading {
+  font-size: 1.1em;
+  color: rgb(15, 15, 15);
+  font-weight: 700;
+}
+
+.otpSubheading {
+  font-size: 0.7em;
+  color: black;
+  line-height: 17px;
+  text-align: center;
+}
+
+.inputContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.otp-input {
+  background-color: rgb(228, 228, 228);
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  border: none;
+  border-radius: 7px;
+  caret-color: rgb(127, 129, 255);
+  color: rgb(44, 44, 44);
+  outline: none;
+  font-weight: 600;
+}
+
+.otp-input:focus,
+.otp-input:valid {
+  background-color: rgba(127, 129, 255, 0.199);
+  transition-duration: .3s;
+}
+
+.verifyButton {
+  width: 100%;
+  height: 30px;
+  border: none;
+  background: #1976d3;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 10px;
+  transition-duration: .2s;
+}
+
+.verifyButton:hover {
+  background: #3a95f0;
+  color: white;
+  transition-duration: .2s;
+}
+
+.exitBtn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.171);
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  border: none;
+  color: black;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+.resendNote {
+  font-size: 0.7em;
+  color: black;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.resendBtn {
+  background-color: transparent;
+  border: none;
+  color: #1976d3;
+  cursor: pointer;
+  font-size: 1.1em;
+  font-weight: 700;
+}
+
+/*-------------------------------Chats--------------------------------------*/
+
+.potential-all-users {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.potential-single-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  position: relative;
+}
+
+.potential-avatar {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.potential-username {
+  color: #000000;
+  text-transform: capitalize;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.user-online {
+  height: 0.75rem;
+  width: 0.75rem;
+  border-radius: 50%;
+  background: rgb(0, 219, 0);
+  position: absolute;
+  bottom: 0.2rem;
+  right: 0.2rem;
+  border: 2px solid white;
 }
